--- a/.github/workflows/GoogleDeploy.yml
+++ b/.github/workflows/GoogleDeploy.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     
-    - id: 'build app'
+    - id: 'build'
       run: npm build
 
     - id: 'auth'
