--- a/.github/workflows/GoogleDeploy.yml
+++ b/.github/workflows/GoogleDeploy.yml
@@ -14,7 +14,7 @@ jobs:
     - uses: actions/checkout@v3
     
     - id: 'build'
-      run: npm build
+      run: npm run build
 
     - id: 'auth'
       uses: 'google-github-actions/auth@v0'
