--- a/.github/workflows/GoogleDeploy.yml
+++ b/.github/workflows/GoogleDeploy.yml
@@ -15,7 +15,7 @@ jobs:
     
     - id: 'build'
       run: |
-        npm run install    
+        npm install    
         npm run build
       
 
