--- a/app.yaml
+++ b/app.yaml
@@ -1,15 +1,10 @@
-runtime: nodejs12
-service: clubs
-entrypoint: node build
-
+runtime: nodejs16
 handlers:
-  - url: /static
-    static_dir: build/static
-
-  - url: /(.*\.(json|ico|js))$
+  # Serve all static files with url ending with a file extension
+  - url: /(.*\..+)$
     static_files: build/\1
-    upload: build/.*\.(json|ico|js)$
-
-  - url: .*
+    upload: build/(.*\..+)$
+  # Catch all handler to index.html
+  - url: /.*
     static_files: build/index.html
     upload: build/index.html
