--- a/.github/workflows/GitHub.yml
+++ b/.github/workflows/GitHub.yml
@@ -17,11 +17,9 @@ jobs:
         steps:
 
         - name: Login
-          uses: google-github-actions/setup-gcloud@v0
+          uses: 'google-github-actions/auth@v0'
           with:
-            project_id: ${{ secrets.GCP_PROJECT_ID }}
-            service_account_email: ${{ secrets.GCP_EMAIL }}
-            service_account_key: ${{ secrets.GCP_SA_KEY }}
+            credentials_json: '${{ secrets.GCP_SA_KEY }}'
 
         - name: Configure Docker
           run: gcloud auth configure-docker --quiet
