--- a/.github/workflows/GitHub.yml
+++ b/.github/workflows/GitHub.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Login
         uses: "google-github-actions/auth@v0"
         with:
-          service_account: "${{ secrets.GCP_SA_KEY }}"
+          credentials_json: "${{ secrets.GCP_SA_KEY }}"
 
       - name: Configure Docker
         run: gcloud auth configure-docker --quiet
