--- a/.github/workflows/GitHub.yml
+++ b/.github/workflows/GitHub.yml
@@ -13,11 +13,6 @@ jobs:
     env:
       IMAGE_NAME: gcr.io/${{ secrets.GCP_PROJECT_ID }}/${{ secrets.GCP_APP_NAME }}
     steps:
-      - name: Login
-        uses: "google-github-actions/auth@v0"
-        with:
-          credentials_json: "${{ secrets.GCP_SA_KEY }}"
-
       - name: Configure Docker
         run: gcloud auth configure-docker --quiet
 
@@ -26,6 +21,12 @@ jobs:
 
       - name: Build Docker image
         run: docker build . -t $IMAGE_NAME
+
+      - name: Login
+        uses: "google-github-actions/auth@v0"
+        with:
+          credentials_json: "${{ secrets.GCP_SA_KEY }}"
+          create_credentials_file: true
 
       - name: Deploy Docker image
         uses: "google-github-actions/deploy-cloudrun@v0"
