--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 REACT_APP_AUTH_API = "https://key-hse.ue.r.appspot.com/"
-REACT_APP_CLUB_API  = "https://hse-clubs.uk.r.appspot.com/"
+REACT_APP_CLUB_API  = "https://backend.hseclubs.com/"
 
 # DEV
 # REACT_APP_AUTH_API = "http://localhost:8080"
