--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-REACT_APP_AUTH_API = "https://key-hse.ue.r.appspot.com/"
-REACT_APP_CLUB_API  = "https://backend.hseclubs.com/"
+# REACT_APP_AUTH_API = "https://key-hse.ue.r.appspot.com/"
+# REACT_APP_CLUB_API  = "https://backend.hseclubs.com/"
 SKIP_PREFLIGHT_CHECK=true
 # DEV
-# REACT_APP_AUTH_API = "http://localhost:8080"
-# REACT_APP_CLUB_API  = "http://localhost:3005"
+REACT_APP_AUTH_API = "http://localhost:8080"
+REACT_APP_CLUB_API  = "http://localhost:3005"
