--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@azure/msal-browser": "^2.35.0",
     "@azure/msal-react": "^1.5.1",
     "@craco/craco": "^5.9.0",
     "@testing-library/jest-dom": "^4.2.4",
